# miaproc

./: .gitignore  CONTEXT.md  README.md  backend_contract.md  pyproject.toml  testing_strategy.md
05_governance/: decision_log.md  risks.md
06_infra/: CONTEXT.md  architecture.md  biomass_colleague_handoff_drafts.md  biomass_handoff.md  biomass_instructions.md  biomass_instructions_20260508.md  biomass_instructions_260508.md  cost_estimates.md  deployment.md  eddy_colleague_handoff_drafts.md  eddy_handoff.md  eddy_instructions.md  eddy_instructions_20260508.md  eddy_instructions_260507.md  eddy_instructions_260508_.md  local_setup.md
09_ops/: CONTEXT.md  monitoring.md  runbooks.md  scheduled_jobs.md
docker/: Dockerfile.miaproc-r45-reddyproc  README.md
docs/: REDDYPROC_LOCAL_TIME_POLICY.md  equation_application_unified.zstd.json  forest_data_schema.csv  m5_reddyproc_hesseflux_magnitude_note.md
examples/: 01_python_only_hesseflux_dynamic.py  02_hesseflux_ltwrapper_comparability.py  03_r_backed_reddyproc_reference.py  README.md
notebooks/: volume_estimation_test.ipynb
src/miaproc/: cli.py
tests/: test_biomass_bigquery_runner.py  test_biomass_bigquery_writeback.py  test_biomass_dina.py  test_case_study_integration.py  test_cli.py  test_cli_biomass_bigquery.py  test_cli_biomass_enrich_table.py  test_cli_eddy_bigquery.py  test_cli_eddy_bigquery_silver_gold.py  test_cli_eddy_m24_grouped.py  test_cli_eddy_m32_source_truth.py  test_cli_eddy_m32a_timestamp.py  test_cli_eddy_silver_gold.py  test_core.py  test_eddy_bigquery_runner.py  test_eddy_bigquery_writeback.py  test_eddy_case_study_input.py  test_eddy_hesseflux_dynamic_ustar.py  test_eddy_hesseflux_engine.py  test_eddy_hesseflux_ltwrapper.py  test_eddy_load_stage1_from_dataframes.py  test_eddy_m32_source_truth.py  test_eddy_m34_wide_passthrough.py  test_eddy_m35a_regularized_timestamp.py  test_eddy_reddyproc_engine.py  test_eddy_reddyproc_live.py  test_eddy_stage1.py  test_eddy_stage2.py  test_import.py  (+1 more)
(+65 files in other folders)
