[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "miaproc"
version = "0.0.1"
description = "Post-processing of multi-sensor mangrove data streams"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Julián Equihua"}]
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
  "mypy>=1.8"
]

hesseflux = [
  "hesseflux>=5.0"
]

biomass = ["pyarrow>=14"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"miaproc.biomass" = ["data/*.parquet"]

[tool.pytest.ini_options]
testpaths = ["tests"]
